<resources>
    <string name="app_name">Bangkit BFAA Submission</string>
    <string name="text_name">Nama User</string>
    <string name="text_location">Lokasi</string>
    <string name="text_company">Perusahaan</string>
    <string name="text_username">Username</string>
    <string name="text_value">Value</string>
    <string name="text_following">Following</string>
    <string name="text_followers">Followers</string>
    <string name="text_repository">Repository</string>
    <string name="text_avatar">Avatar</string>
    <string name="text_logo_splash">Logo Splash</string>
    <string name="text_sample_avatar">Sample Avatar</string>
<<<<<<< Updated upstream

    <!-- User Data String resources-->

    <string-array name="username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <string-array name="location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>

    <string-array name="repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </string-array>

    <string-array name="company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>

    <string-array name="followers">
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </string-array>

    <string-array name="following">
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </string-array>

    <string-array name="avatar">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
    </string-array>
=======
    <string name="text_result">Showing result for \"%s\"</string>
    <string name="text_search">Search</string>
    <string name="search_hint">Insert Username..</string>
    <string name="text_title_detail">%s\'s profile</string>
    <string name="toolbar_logo">Toolbar Logo</string>
    <string name="text_blog">Blog</string>
    <string name="text_no_users_found">No user found.</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_favorite_user">Favorite User</string>
    <string name="text_settings">Settings</string>
    <string name="favorite_floating_button">Favorite Floating Button</string>
    <string name="text_delete">Delete</string>
    <string name="text_delete_all">Delete All</string>
    <string name="text_message_alert">Are you sure to delete all user from your favorite?</string>
    <string name="text_theme">THEME</string>
    <string name="text_dark_mode">Dark Mode</string>
    <string name="text_theme_icon">Theme Icon</string>
    <string name="text_no_user_favorite">No user in Favorite.</string>
    <string name="text_share">Share</string>
    <string name="text_to_web_github">Open Github Profile</string>
    <string name="text_detail_share">Check %s profile on Github! Here is the link:\nhttps://github.com/%s</string>
    <string name="text_url_github">http://github.com/%s</string>
>>>>>>> Stashed changes

</resources>