<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserDetailActivity"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_detail_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/text_avatar"/>

    <TextView
        android:id="@+id/tv_detail_name"
        style="@style/TextContentDetail.Bold"
        android:layout_marginTop="32dp"
        android:text="@string/text_name"
        app:layout_constraintTop_toBottomOf="@id/iv_detail_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_detail_username"
        style="@style/TextContentDetail.Value"
        android:text="@string/text_username"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
        app:layout_constraintStart_toStartOf="@id/tv_detail_name"
        app:layout_constraintEnd_toEndOf="@id/tv_detail_name"/>

    <TextView
        android:id="@+id/tv_detail_repository_count"
        style="@style/TextContentDetail.Bold.CountValue"
        app:layout_constraintEnd_toStartOf="@id/tv_detail_following_count"
        app:layout_constraintStart_toStartOf="@id/tv_detail_name"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_username" />

    <TextView
        android:id="@+id/tv_detail_following_count"
        style="@style/TextContentDetail.Bold.CountValue"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_username"
        app:layout_constraintStart_toEndOf="@id/tv_detail_repository_count"
        app:layout_constraintEnd_toStartOf="@id/tv_detail_followers_count"/>

    <TextView
        android:id="@+id/tv_detail_followers_count"
        style="@style/TextContentDetail.Bold.CountValue"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_username"
        app:layout_constraintStart_toEndOf="@id/tv_detail_following_count"
        app:layout_constraintEnd_toEndOf="@id/tv_detail_name"/>

    <TextView
        android:id="@+id/tv_text_repository"
        style="@style/TextContentDetail.Value"
        android:text="@string/text_repository"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_repository_count"
        app:layout_constraintStart_toStartOf="@id/tv_detail_name"
        app:layout_constraintEnd_toStartOf="@id/tv_detail_following_count"/>

    <TextView
        android:id="@+id/tv_text_following"
        style="@style/TextContentDetail.Value"
        android:text="@string/text_following"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_following_count"
        app:layout_constraintStart_toEndOf="@id/tv_text_repository"
        app:layout_constraintEnd_toStartOf="@id/tv_text_followers"/>

    <TextView
        android:id="@+id/tv_text_followers"
        style="@style/TextContentDetail.Value"
        android:text="@string/text_followers"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_followers_count"
        app:layout_constraintStart_toEndOf="@id/tv_text_following"
        app:layout_constraintEnd_toEndOf="@id/tv_detail_name"/>

    <TextView
        android:id="@+id/tv_detail_company"
        style="@style/TextDetailWithDrawable"
        android:layout_marginTop="24dp"
        android:text="@string/text_company"
        app:layout_constraintEnd_toEndOf="@id/tv_detail_name"
        app:layout_constraintStart_toStartOf="@id/tv_detail_name"
        app:layout_constraintTop_toBottomOf="@id/tv_text_repository"
        app:drawableStartCompat="@drawable/ic_baseline_location_city_16"/>

    <TextView
        android:id="@+id/tv_detail_location"
        style="@style/TextDetailWithDrawable"
        android:layout_marginTop="4dp"
        android:text="@string/text_location"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_company"
        app:layout_constraintStart_toStartOf="@id/tv_detail_name"
        app:layout_constraintEnd_toEndOf="@id/tv_detail_name"
        app:drawableStartCompat="@drawable/ic_baseline_location_on_16"/>


</androidx.constraintlayout.widget.ConstraintLayout>