<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_item_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/text_sample_avatar" />

    <TextView
        android:id="@+id/tv_item_name"
        style="@style/TextItemList"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        tools:text="@string/text_name"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black_github"
        app:layout_constraintTop_toTopOf="@id/iv_item_avatar"
        app:layout_constraintStart_toEndOf="@id/iv_item_avatar"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_item_company"
        style="@style/TextItemList.Drawabled"
        tools:text="@string/text_company"
        app:layout_constraintStart_toStartOf="@id/tv_item_name"
        app:layout_constraintEnd_toEndOf="@id/tv_item_name"
        app:layout_constraintTop_toBottomOf="@id/tv_item_name"
        app:drawableStartCompat="@drawable/ic_baseline_location_city_12"/>

    <TextView
        android:id="@+id/tv_item_location"
        style="@style/TextItemList.Drawabled"
        app:drawableStartCompat="@drawable/ic_baseline_location_on_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_item_name"
        app:layout_constraintStart_toStartOf="@id/tv_item_name"
        app:layout_constraintTop_toBottomOf="@id/tv_item_company"
        tools:text="@string/text_location" />


</androidx.constraintlayout.widget.ConstraintLayout>