<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        android:background="@color/black_github"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/tv_title_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/text_settings"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/white"
            android:singleLine="true"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:text="@string/text_theme"
        android:textSize="14sp"
        android:textColor="?attr/colorPrimary"
        android:letterSpacing="0.03"
        android:fontFamily="@font/poppins_semibold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/theme_setting_layout"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        android:background="?attr/selectableItemBackground">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_theme_mode"
            android:contentDescription="@string/text_theme_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"
            android:text="@string/text_dark_mode"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="?attr/colorControlNormal"
            android:letterSpacing="0.03"
            android:fontFamily="@font/poppins_light"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_theme"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"/>

</LinearLayout>