<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item_favorite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_margin="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/iv_item"
            android:layout_width="70dp"
            android:layout_height="70dp"
            tools:src="@drawable/default_avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/text_sample_avatar"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_name"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            android:singleLine="true"
            android:gravity="center"
            android:letterSpacing="0.03"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintTop_toBottomOf="@id/iv_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_name"
            android:textColor="?attr/colorPrimary"
            android:textSize="12sp"
            android:letterSpacing="0.03"
            android:gravity="center"
            android:fontFamily="@font/poppins"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_repository"
            android:textColor="?attr/colorPrimary"
            android:textSize="14sp"
            android:drawablePadding="4dp"
            app:drawableStartCompat="@drawable/ic_baseline_folder"
            app:layout_constraintTop_toBottomOf="@id/tv_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>