<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
<<<<<<< Updated upstream
    tools:context=".activity.MainActivity">
    
=======
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        android:background="@color/black_github"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_toolbar_title"
            android:layout_width="105dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="24dp"
            android:src="@drawable/actionbar_image"
            android:layout_gravity="start|center_vertical"
            android:contentDescription="@string/toolbar_logo" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/text_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="24dp"
        android:textSize="14sp"
        android:fontFamily="@font/poppins"
        android:text="@string/text_result"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/toolbar_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rv_users"/>

>>>>>>> Stashed changes
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_users"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
<<<<<<< Updated upstream
        app:layout_constraintTop_toTopOf="parent"
        android:clipToPadding="false"/>
=======
        app:layout_constraintTop_toBottomOf="@id/text_result"
        android:clipToPadding="false"
        tools:listitem="@layout/item_list_user"/>

    <ProgressBar
        android:id="@+id/pg_main"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_not_found"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/text_no_users_found"
        android:textSize="18sp"
        android:visibility="gone"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


>>>>>>> Stashed changes
</androidx.constraintlayout.widget.ConstraintLayout>